--- a/servant-reflex-server.cabal
+++ b/servant-reflex-server.cabal
@@ -11,7 +11,10 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Scratch2
+  exposed-modules:     ServantReflexServer
+                     , Util.Tuples
+                     , Util.List
+                     , Example
   build-depends:       base >=4.9 && <4.10
                      , mtl >=2.2 && <2.3
                      , primitive >=0.6 && <0.7
@@ -29,8 +32,12 @@ library
                      , servant 
                      , servant-server
                      , http-api-data
+                     , wai
                      , warp
                      , reflex-basic-host
+                     , transformers
+                     , dependent-map
+                     , these
   hs-source-dirs:      src
   ghc-options:         -Wall
   default-language:    Haskell2010
