--- a/reflex-server-servant.cabal
+++ b/reflex-server-servant.cabal
@@ -14,49 +14,50 @@ library
   exposed-modules:     Reflex.Server.Servant
                      , Util.Ticket
                      , Util.Tuples
-  build-depends:       base >=4.9 && <4.10
-                     , mtl >=2.2 && <2.3
-                     , primitive >=0.6 && <0.7
-                     , hashable >=1.2 && <1.3
-                     , stm >=2.4 && <2.5
-                     , bytestring >= 0.10 && < 0.11
-                     , containers
-                     , aeson
-                     , network
-                     , ttrie
-                     , dependent-sum
-                     , ref-tf
-                     , reflex
-                     , servant 
-                     , servant-server
-                     , http-api-data
-                     , wai
-                     , reflex-basic-host
+  build-depends:       base              >= 4.9  && < 4.10
+                     , aeson             >= 1.2  && < 1.3
+                     , bytestring        >= 0.10 && < 0.11
+                     , containers        >= 0.5  && < 0.6
+                     , dependent-sum     >= 0.4  && < 0.5
+                     , hashable          >= 1.2  && < 1.3
+                     , http-api-data     >= 0.3  && < 0.4
+                     , mtl               >= 2.2  && < 2.3
+                     , network           >= 2.6  && < 2.7
+                     , primitive         >= 0.6  && < 0.7
+                     , reflex            >= 0.5  && < 0.6
+                     , ref-tf            >= 0.4  && < 0.5
+                     , servant           >= 0.11 && < 0.12
+                     , servant-server    >= 0.11 && < 0.12
+                     , stm               >= 2.4  && < 2.5
+                     , tagged            >= 0.8  && < 0.9
+                     , ttrie             >= 0.1  && < 0.2
+                     , wai               >= 3.2  && < 3.3
+                     , reflex-basic-host >= 0.1  && < 0.2
   hs-source-dirs:      src
   ghc-options:         -Wall
   default-language:    Haskell2010
 
 executable example
   main-is:             Example.hs
-  other-modules:       Util.List
-  build-depends:       base >=4.9 && <4.10
-                     , mtl >=2.2 && <2.3
-                     , hashable >=1.2 && <1.3
-                     , stm >=2.4 && <2.5
-                     , containers
-                     , dependent-sum
-                     , ref-tf
-                     , reflex
-                     , reflex-dom-core
-                     , servant 
-                     , servant-server
-                     , http-api-data
-                     , wai
-                     , warp
-                     , reflex-basic-host
-                     , transformers
-                     , these
+  build-depends:       base              >= 4.9  && < 4.10
+                     , containers        >= 0.5  && < 0.6
+                     , dependent-sum     >= 0.4  && < 0.5
+                     , hashable          >= 1.2  && < 1.3
+                     , http-api-data     >= 0.3  && < 0.4
+                     , mtl               >= 2.2  && < 2.3
+                     , reflex            >= 0.5  && < 0.6
+                     , reflex-dom-core   >= 0.4  && < 0.5
+                     , ref-tf            >= 0.4  && < 0.5
+                     , servant           >= 0.11 && < 0.12
+                     , servant-server    >= 0.11 && < 0.12
+                     , stm               >= 2.4  && < 2.5
+                     , transformers      >= 0.5  && < 0.6
+                     , wai               >= 3.2  && < 3.3
+                     , warp              >= 3.2  && < 3.3
+                     , reflex-basic-host >= 0.1  && < 0.2
                      , reflex-server-servant
   hs-source-dirs:      exe
   ghc-options:         -Wall
   default-language:    Haskell2010
+
+
