--- a/reflex-backend-servant.cabal
+++ b/reflex-backend-servant.cabal
@@ -1,4 +1,4 @@
-name:                reflex-server-servant
+name:                reflex-backend-servant
 version:             0.1.0.0
 license:             BSD3
 license-file:        LICENSE
@@ -11,24 +11,24 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Reflex.Server.Servant
+  exposed-modules:     Reflex.Backend.Servant
                      , Util.Ticket
                      , Util.Tuples
-  build-depends:       base              >= 4.9  && < 4.10
-                     , aeson             >= 1.2  && < 1.3
+  build-depends:       base              >= 4.9  && < 4.13
+                     , aeson             >= 1.2  && < 1.5
                      , bytestring        >= 0.10 && < 0.11
-                     , containers        >= 0.5  && < 0.6
+                     , containers        >= 0.5  && < 0.7
                      , dependent-sum     >= 0.4  && < 0.5
                      , hashable          >= 1.2  && < 1.3
-                     , http-api-data     >= 0.3  && < 0.4
+                     , http-api-data     >= 0.3  && < 0.5
                      , mtl               >= 2.2  && < 2.3
-                     , network           >= 2.6  && < 2.7
+                     , network           >= 2.6  && < 3.1
                      , primitive         >= 0.6  && < 0.7
                      , reflex            >= 0.5  && < 0.6
                      , ref-tf            >= 0.4  && < 0.5
-                     , servant           >= 0.11 && < 0.12
-                     , servant-server    >= 0.11 && < 0.12
-                     , stm               >= 2.4  && < 2.5
+                     , servant           >= 0.11 && < 0.17
+                     , servant-server    >= 0.11 && < 0.17
+                     , stm               >= 2.4  && < 2.6
                      , tagged            >= 0.8  && < 0.9
                      , ttrie             >= 0.1  && < 0.2
                      , wai               >= 3.2  && < 3.3
@@ -39,23 +39,22 @@ library
 
 executable example
   main-is:             Example.hs
-  build-depends:       base              >= 4.9  && < 4.10
-                     , containers        >= 0.5  && < 0.6
+  build-depends:       base              >= 4.9  && < 4.13
+                     , containers        >= 0.5  && < 0.7
                      , dependent-sum     >= 0.4  && < 0.5
                      , hashable          >= 1.2  && < 1.3
-                     , http-api-data     >= 0.3  && < 0.4
+                     , http-api-data     >= 0.3  && < 0.5
                      , mtl               >= 2.2  && < 2.3
                      , reflex            >= 0.5  && < 0.6
-                     , reflex-dom-core   >= 0.4  && < 0.5
                      , ref-tf            >= 0.4  && < 0.5
-                     , servant           >= 0.11 && < 0.12
-                     , servant-server    >= 0.11 && < 0.12
-                     , stm               >= 2.4  && < 2.5
+                     , servant           >= 0.11 && < 0.17
+                     , servant-server    >= 0.11 && < 0.17
+                     , stm               >= 2.4  && < 2.6
                      , transformers      >= 0.5  && < 0.6
                      , wai               >= 3.2  && < 3.3
                      , warp              >= 3.2  && < 3.3
                      , reflex-basic-host >= 0.1  && < 0.2
-                     , reflex-server-servant
+                     , reflex-backend-servant
   hs-source-dirs:      exe
   ghc-options:         -Wall
   default-language:    Haskell2010
